--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
     <header>
-        <img id="shape1" src="/assets/Shape.png">
-        <img id="shape2" src="/assets/Shape2.png">
-        <img id="menupng" src="/assets/ic_menu.png">
+        <nav><img id="menupng" src="/assets/ic_menu.png"></nav>
     </header>
     <section class="container1">
        <h1 class="name">Gaurav Gangwar</h1>
