Fix the menu image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav><img id="menupng" src="/assets/ic_menu.png"></nav>
+        <nav><img id="menupng" src="./assets/ic_menu.png"></nav>
     </header>
     <section class="container1">
        <h1 class="name">Gaurav Gangwar</h1>
