--- a/index.html
+++ b/index.html
@@ -14,7 +14,157 @@
     <section class="container1">
        <h1 class="name">Gaurav Gangwar</h1>
        <p>Hello! I am a software developer! I can help you build a product, feature or website. Taka a look of my works. If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
-       <button type="button">Start collaboration</button>
+       <a href="#"><button type="button">Start collaboration</button></a>
+       <div class="after-head">
+        <img src="./assets/image_geometry_2.png">
+       </div>
+    </section>
+    <section class="works">
+       <h2>Projects</h2>
+       <div class="grid-items">
+        <div class="project">
+            <img class="pr-img1" src="./assets/Rectangle 21.png">
+            <div class="project-ins">
+                <h3>Project name goes here</h3>
+                <ul>
+                    <li>HTML/CSS</li>
+                    <li>Ruby on Rails</li>
+                    <li>JavaScript</li>
+                </ul>
+                <a href="#">
+                    <button type="button">
+                        <span>See this project</span>
+                        <img class="pr-button-img" src="./assets/Union.png">
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div class="project">
+            <img class="pr-img" src="./assets/pr2.png">
+            <div class="project-ins">
+                <h3>Project name goes here</h3>
+                <ul>
+                    <li>HTML/CSS</li>
+                    <li>Ruby on Rails</li>
+                    <li>JavaScript</li>
+                </ul>
+                <a href="#">
+                    <button type="button">
+                        <span>See this project</span>
+                        <img class="pr-button-img" src="./assets/Union.png">
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div class="project">
+            <img class="pr-img" src="./assets/pr3.png">
+            <div class="project-ins">
+                <h3>Project name goes here</h3>
+                <ul>
+                    <li>HTML/CSS</li>
+                    <li>Ruby on Rails</li>
+                    <li>JavaScript</li>
+                </ul>
+                <a href="#">
+                    <button type="button">
+                        <span>See this project</span>
+                        <img class="pr-button-img" src="./assets/Union.png">
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div class="project">
+            <img class="pr-img" src="./assets/pr4.png">
+            <div class="project-ins">
+                <h3>Project name goes here</h3>
+                <ul>
+                    <li>HTML/CSS</li>
+                    <li>Ruby on Rails</li>
+                    <li>JavaScript</li>
+                </ul>
+                <a href="#">
+                    <button type="button">
+                        <span>See this project</span>
+                        <img class="pr-button-img" src="./assets/Union.png">
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div class="project">
+            <img class="pr-img" src="./assets/pr5.png">
+            <div class="project-ins">
+                <h3>Project name goes here</h3>
+                <ul>
+                    <li>HTML/CSS</li>
+                    <li>Ruby on Rails</li>
+                    <li>JavaScript</li>
+                </ul>
+                <a href="#">
+                    <button type="button">
+                        <span>See this project</span>
+                        <img class="pr-button-img" src="./assets/Union.png">
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div class="project">
+            <img class="pr-img" src="./assets/pr6.png">
+            <div class="project-ins">
+                <h3>Project name goes here</h3>
+                <ul>
+                    <li>HTML/CSS</li>
+                    <li>Ruby on Rails</li>
+                    <li>JavaScript</li>
+                </ul>
+                <a href="#">
+                    <button type="button">
+                        <span>See this project</span>
+                        <img class="pr-button-img" src="./assets/Union.png">
+                    </button>
+                </a>
+            </div>
+        </div>
+       </div>
+    </section>
+    <section class="about">
+        <h2>About</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea eiusmod</p>
+        <button type="button">
+            Get my CV
+            <img src="./assets/ic_download.svg">
+        </button>
+        <div class="languages">
+            <h4 class="set-h">Languages</h4>
+            <ul class="set-ul">
+                <li>JavaScript(ES5/ES6)</li>
+                <li>Ruby</li>
+                <li>HTML</li>
+                <li>CSS</li>
+            </ul>
+            <img class="set-img" src="./assets/hash.png">
+        </div>
+        <div class="frameworks">
+            <h4 class="set-h">Frameworks</h4>
+            <ul class="set-ul">
+                <li>Bootstrap</li>
+                <li>Ruby on rails</li>
+                <li>RSpec</li>
+                <li>Capibara</li>
+                <li>Selenium</li>
+            </ul>
+            <img class="set-img" src="./assets/Group 18.png">
+        </div>
+        <div class="skills">
+            <h4 class="set-h">Skills</h4>
+            <ul class="set-ul">
+                <li>Codekit</li>
+                <li>Codepan</li>
+                <li>GitHub</li>
+                <li>GitLab</li>
+                <li>Terminal</li>
+            </ul>
+            <img class="set-img" src="./assets/ic_skills.png">
+        </div>
     </section>
 </body>
 </html>
