--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
       </div>
       <div class="prtemplate2-gem">
-        <img src="./assets/image-geometry_2.svg" alt="" />
+        <img src="./assets/image-geometry_2.svg"/>
       </div>
       <!-- Project 3 -->
       <div class="project pr-3">
