Add alt attribute to images in html file

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
+  <title>Gaurav Gangwar-Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <header>
-    <nav><img id="menupng" src="./assets/ic_menu.png"></nav>
+    <nav><img id="menupng" src="./assets/ic_menu.png" alt="menu-png"></nav>
   </header>
   <section class="container1">
     <h1 class="name">Gaurav Gangwar</h1>
@@ -19,14 +19,14 @@
       you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
     <a href="#"><button type="button">Start collaboration</button></a>
     <div class="after-head">
-      <img src="./assets/image_geometry_2.png">
+      <img src="./assets/image_geometry_2.png" alt="geometry-png">
     </div>
   </section>
   <section class="works">
     <h2>Projects</h2>
     <div class="grid-items">
       <div class="project">
-        <img class="pr-img1" src="./assets/Rectangle 21.png">
+        <img class="pr-img1" src="./assets/Rectangle 21.png" alt="project-1">
         <div class="project-ins">
           <h3>Project name goes here</h3>
           <ul>
@@ -37,13 +37,13 @@
           <a href="#">
             <button type="button">
               <span>See this project</span>
-              <img class="pr-button-img" src="./assets/Union.png">
+              <img class="pr-button-img" src="./assets/Union.png" alt="button-img">
             </button>
           </a>
         </div>
       </div>
       <div class="project">
-        <img class="pr-img" src="./assets/pr2.png">
+        <img class="pr-img" src="./assets/pr2.png" alt="project-2">
         <div class="project-ins">
           <h3>Project name goes here</h3>
           <ul>
@@ -54,13 +54,13 @@
           <a href="#">
             <button type="button">
               <span>See this project</span>
-              <img class="pr-button-img" src="./assets/Union.png">
+              <img class="pr-button-img" src="./assets/Union.png" alt="button-img">
             </button>
           </a>
         </div>
       </div>
       <div class="project">
-        <img class="pr-img" src="./assets/pr3.png">
+        <img class="pr-img" src="./assets/pr3.png" alt="project-3">
         <div class="project-ins">
           <h3>Project name goes here</h3>
           <ul>
@@ -71,13 +71,13 @@
           <a href="#">
             <button type="button">
               <span>See this project</span>
-              <img class="pr-button-img" src="./assets/Union.png">
+              <img class="pr-button-img" src="./assets/Union.png" alt="button-img">
             </button>
           </a>
         </div>
       </div>
       <div class="project">
-        <img class="pr-img" src="./assets/pr4.png">
+        <img class="pr-img" src="./assets/pr4.png" alt="project-4">
         <div class="project-ins">
           <h3>Project name goes here</h3>
           <ul>
@@ -88,13 +88,13 @@
           <a href="#">
             <button type="button">
               <span>See this project</span>
-              <img class="pr-button-img" src="./assets/Union.png">
+              <img class="pr-button-img" src="./assets/Union.png" alt="button-img">
             </button>
           </a>
         </div>
       </div>
       <div class="project">
-        <img class="pr-img" src="./assets/pr5.png">
+        <img class="pr-img" src="./assets/pr5.png" alt="project-5">
         <div class="project-ins">
           <h3>Project name goes here</h3>
           <ul>
@@ -105,13 +105,13 @@
           <a href="#">
             <button type="button">
               <span>See this project</span>
-              <img class="pr-button-img" src="./assets/Union.png">
+              <img class="pr-button-img" src="./assets/Union.png" alt="button-img">
             </button>
           </a>
         </div>
       </div>
       <div class="project">
-        <img class="pr-img" src="./assets/pr6.png">
+        <img class="pr-img" src="./assets/pr6.png" alt="project-6">
         <div class="project-ins">
           <h3>Project name goes here</h3>
           <ul>
@@ -122,7 +122,7 @@
           <a href="#">
             <button type="button">
               <span>See this project</span>
-              <img class="pr-button-img" src="./assets/Union.png">
+              <img class="pr-button-img" src="./assets/Union.png" alt="button-img">
             </button>
           </a>
         </div>
@@ -135,7 +135,7 @@
       magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea eiusmod</p>
     <button type="button">
       Get my CV
-      <img src="./assets/ic_download.svg">
+      <img src="./assets/ic_download.svg" alt="button-img">
     </button>
     <div class="languages">
       <h4 class="set-h">Languages</h4>
@@ -145,7 +145,7 @@
         <li>HTML</li>
         <li>CSS</li>
       </ul>
-      <img class="set-img" src="./assets/hash.png">
+      <img class="set-img" src="./assets/hash.png" alt="hash">
     </div>
     <div class="frameworks">
       <h4 class="set-h">Frameworks</h4>
@@ -156,7 +156,7 @@
         <li>Capibara</li>
         <li>Selenium</li>
       </ul>
-      <img class="set-img" src="./assets/Group 18.png">
+      <img class="set-img" src="./assets/Group 18.png" alt="geometry-img">
     </div>
     <div class="skills">
       <h4 class="set-h">Skills</h4>
@@ -167,7 +167,7 @@
         <li>GitLab</li>
         <li>Terminal</li>
       </ul>
-      <img class="set-img" src="./assets/ic_skills.png">
+      <img class="set-img" src="./assets/ic_skills.png" alt="ic-img">
     </div>
   </section>
   <section class="contact-form">
@@ -186,16 +186,16 @@
     <a href="#">
         <button type="button">
             Get my Resume
-            <img src="./assets/resume.png">
+            <img src="./assets/resume.png" alt="button-img">
         </button>
     </a>
     <div class="footer-icons">
-        <a href="#"><img class="stack-img" src="./assets/ic_stackoverflow.png"></a>
-        <a href="#"><img class="icons-img" src="./assets/ic_github.png"></a>
-        <a href="#"><img class="icons-img" src="./assets/Group.png"></a>
-        <a href="#"><img class="icons-img" src="./assets/ic_linkedin.png"></a>
-        <a href="#"><img class="icons-img" src="./assets/ic_medium.png"></a>
-        <a href="#"><img class="icons-img" src="./assets/ic_angellist.png" alt=""></a>
+        <a href="#"><img class="stack-img" src="./assets/ic_stackoverflow.png" alt="slck-png"></a>
+        <a href="#"><img class="icons-img" src="./assets/ic_github.png" alt="github-png"></a>
+        <a href="#"><img class="icons-img" src="./assets/Group.png" alt="twitter-png"></a>
+        <a href="#"><img class="icons-img" src="./assets/ic_linkedin.png" alt="linkedin-png"></a>
+        <a href="#"><img class="icons-img" src="./assets/ic_medium.png" alt="medium-png"></a>
+        <a href="#"><img class="icons-img" src="./assets/ic_angellist.png" alt="angellist-png"></a>
     </div>
   </footer>
 </body>
