Add alt attribute to index.html file

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio</title>
+  <title>Gaurav Gangwar Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <header>
     <nav>
-      <img id="menupng" src="./assets/ic_menu.png" />
+      <img id="menupng" src="./assets/ic_menu.png" alt="menu" />
       <ul>
         <li><a href="#hello">Hello</a></li>
         <li><a href="#works">Portfolio</a></li>
@@ -32,8 +32,8 @@
       <a href="#"><button type="button">Start collaboration</button></a>
     </div>
     <div class="after-head">
-      <img class="cont-img1" src="./assets/image_geometry_2.png" />
-      <img class="cont-img2" src="./assets/image-geometry_1.svg" />
+      <img class="cont-img1" src="./assets/image_geometry_2.png" alt="geometry" />
+      <img class="cont-img2" src="./assets/image-geometry_1.svg" alt="geometry" />
     </div>
   </section>
   <section class="works" id="works">
@@ -42,7 +42,7 @@
         <h2>Projects</h2>
       </div>
       <div class="project">
-        <img class="pr-img1" src="./assets/Rectangle 21.svg" />
+        <img class="pr-img1" src="./assets/Rectangle 21.svg" alt="project-1" />
         <div class="project-ins">
           <h3>Project name goes here</h3>
           <ul>
@@ -53,7 +53,7 @@
           <a href="#">
             <button type="button">
               <span>See this project</span>
-              <img class="pr-button-img" src="./assets/Union.png" />
+              <img class="pr-button-img" src="./assets/Union.png" alt="button" />
             </button>
           </a>
         </div>
@@ -62,7 +62,7 @@
     <div class="prtemplate-2">
       <!-- Project 2 -->
       <div class="project">
-        <img class="pr-img des-pr2" src="./assets/Rectangle 46.svg" />
+        <img class="pr-img des-pr2" src="./assets/Rectangle 46.svg" alt="project-2" />
         <div class="project-ins">
           <h3>Project name goes here</h3>
           <ul>
@@ -73,17 +73,17 @@
           <a href="#">
             <button type="button">
               <span>See this project</span>
-              <img class="pr-button-img" src="./assets/Union.png" />
+              <img class="pr-button-img" src="./assets/Union.png" alt="button" />
             </button>
           </a>
         </div>
       </div>
       <div class="prtemplate2-gem">
-        <img src="./assets/image-geometry_2.svg"/>
+        <img src="./assets/image-geometry_2.svg" alt="geometry"/>
       </div>
       <!-- Project 3 -->
       <div class="project pr-3">
-        <img class="pr-img des-pr3" src="./assets/Rectangle 25.svg" />
+        <img class="pr-img des-pr3" src="./assets/Rectangle 25.svg" alt="project-3" />
         <div class="project-ins">
           <h3>Project name goes here</h3>
           <ul>
@@ -94,7 +94,7 @@
           <a href="#">
             <button type="button">
               <span>See this project</span>
-              <img class="pr-button-img" src="./assets/Union.png" />
+              <img class="pr-button-img" src="./assets/Union.png" alt="button" />
             </button>
           </a>
         </div>
@@ -103,7 +103,7 @@
     <div class="prtemplate-3">
       <!-- Project 4 -->
       <div class="project">
-        <img class="pr-img des-pr4" src="./assets/Rectangle 27.svg" />
+        <img class="pr-img des-pr4" src="./assets/Rectangle 27.svg" alt="project-4" />
         <div class="project-ins">
           <h3>Project name goes here</h3>
           <ul>
@@ -114,7 +114,7 @@
           <a href="#">
             <button type="button">
               <span>See this project</span>
-              <img class="pr-button-img" src="./assets/Union.png" />
+              <img class="pr-button-img" src="./assets/Union.png" alt="button" />
             </button>
           </a>
         </div>
@@ -122,7 +122,7 @@
       <div class="prtemplate3-grid">
         <!-- Project 5 -->
         <div class="project">
-          <img class="pr-img des-pr5" src="./assets/Rectangle 26.svg" />
+          <img class="pr-img des-pr5" src="./assets/Rectangle 26.svg" alt="project-5" />
           <div class="project-ins">
             <h3>Project name goes here</h3>
             <ul>
@@ -133,24 +133,24 @@
             <a href="#">
               <button type="button">
                 <span>See this project</span>
-                <img class="pr-button-img" src="./assets/Union.png" />
+                <img class="pr-button-img" src="./assets/Union.png" alt="buuton" />
               </button>
             </a>
           </div>
         </div>
         <div class="prtemplate3-img">
           <!-- <img src="./assets/Shape.svg"> -->
-          <img src="./assets/Group 83 (1).svg" />
+          <img src="./assets/Group 83 (1).svg" alt="shapes" />
         </div>
       </div>
     </div>
     <div class="prtemplate-4">
       <div class="prtemplate4-back">
-        <img src="./assets/image-geometry_4.svg" alt="" />
+        <img src="./assets/image-geometry_4.svg" alt="geometry" />
       </div>
       <!-- Project 6 -->
       <div class="project">
-        <img class="pr-img" src="./assets/Rectangle 47.svg" />
+        <img class="pr-img" src="./assets/Rectangle 47.svg" alt="project-6" />
         <div class="project-ins">
           <h3>Project name goes here</h3>
           <ul>
@@ -161,7 +161,7 @@
           <a href="#">
             <button type="button">
               <span>See this project</span>
-              <img class="pr-button-img" src="./assets/Union.png" />
+              <img class="pr-button-img" src="./assets/Union.png" alt="button" />
             </button>
           </a>
         </div>
@@ -179,7 +179,7 @@
       </p>
       <button type="button">
         Get my CV
-        <img src="./assets/ic_download.svg" />
+        <img src="./assets/ic_download.svg" alt="button" />
       </button>
     </div>
     <div class="about-col-2">
@@ -192,7 +192,7 @@
             <li>HTML</li>
             <li>CSS</li>
           </ul>
-          <img class="set-img" src="./assets/hash.png" />
+          <img class="set-img" src="./assets/hash.png" alt="hash" />
         </div>
         <div class="frameworks">
           <h4 class="set-h">Frameworks</h4>
@@ -203,7 +203,7 @@
             <li>Capibara</li>
             <li>Selenium</li>
           </ul>
-          <img class="set-img" src="./assets/Group 18.png" />
+          <img class="set-img" src="./assets/Group 18.png" alt="hash" />
         </div>
         <div class="skills">
           <h4 class="set-h">Skills</h4>
@@ -214,10 +214,10 @@
             <li>GitLab</li>
             <li>Terminal</li>
           </ul>
-          <img class="set-img" src="./assets/ic_skills.png" />
+          <img class="set-img" src="./assets/ic_skills.png" alt="skills" />
         </div>
         <div class="dots-3">
-          <img src="./assets/image_dots_with_teal.svg" />
+          <img src="./assets/image_dots_with_teal.svg" alt="dots" />
         </div>
       </div>
     </div>
@@ -245,24 +245,24 @@
         </a>
       </form>
     </div>
-    <img class="img2" src="./assets/image-geometry_7.svg">
+    <img class="img2" src="./assets/image-geometry_7.svg" alt="geometry">
   </section>
   <footer>
     <div>
       <a href="#">
         <button type="button">
           Get my Resume
-          <img src="./assets/resume.png" />
+          <img src="./assets/resume.png" alt="button" />
         </button>
       </a>
     </div>
     <div class="footer-icons">
-      <a href="#"><img class="stack-img" src="./assets/ic_stackoverflow.png" /></a>
-      <a href="#"><img class="icons-img" src="./assets/ic_github.png" /></a>
-      <a href="#"><img class="icons-img" src="./assets/Group.png" /></a>
-      <a href="#"><img class="icons-img" src="./assets/ic_linkedin.png" /></a>
-      <a href="#"><img class="icons-img" src="./assets/ic_medium.png" /></a>
-      <a href="#"><img class="icons-img" src="./assets/ic_angellist.png" alt="" /></a>
+      <a href="#"><img class="stack-img" src="./assets/ic_stackoverflow.png" alt="stactoverflow" /></a>
+      <a href="#"><img class="icons-img" src="./assets/ic_github.png" alt="github" /></a>
+      <a href="#"><img class="icons-img" src="./assets/Group.png" alt="twitter" /></a>
+      <a href="#"><img class="icons-img" src="./assets/ic_linkedin.png" alt="linkedin" /></a>
+      <a href="#"><img class="icons-img" src="./assets/ic_medium.png" alt="medium" /></a>
+      <a href="#"><img class="icons-img" src="./assets/ic_angellist.png" alt="angellist" /></a>
     </div>
   </footer>
 </body>
