--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
+    <div id="pop-up">
+      <ul>
+        <li><a href="#hello">Hello</a></li>
+        <li><a href="#works">Portfolio</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
   </header>
   <section class="container1" id="hello">
     <div class="cont-text-div">
