--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat.
       </p>
-      <form id="form" method="post" action="https://formspree.io/f/xvoyvapl">
+      <form id="form" method="post" action="https://formspree.io/f/mjvzlzla">
         <div class="name-email">
           <input class="form-items" type="text" name="name" id="full-name" maxlength="30" placeholder="Your name"
             required />
@@ -254,8 +254,8 @@
         </div>
         <textarea class="form-items" name="text-area" id="text-area" maxlength="500" cols="30" rows="6"
           placeholder="Write your message here" required></textarea>
+        <div id="error"></div>
         <a href="#">
-          <div id="Error"></div>
           <button type="submit" class="start-collab">
             Start collaboration
           </button>
